--- a/artist.html
+++ b/artist.html
@@ -54,6 +54,9 @@
                     <option selected>Choose...</option>
                     <option>Painting</option>
                     <option>Sketching</option>
+                    <option>Sculpture</option>
+                    <option>Ceramics</option>
+                    
                 </select>
             </div>
         </div>
