--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="items">
         <a class="navbar-brand" href="index.html" target ="_self">HOME</a>
         &nbsp;
-        <a class="navbar-brand" href="admin.html" >ADMIN LOGIN</a>
+        <a class="navbar-brand" href="adminlogin.html" >ADMIN LOGIN</a>
         &nbsp;
         <a class="navbar-brand" href="#">CUSTOMER LOGIN</a>
       </div>
