--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         &nbsp;
         <a class="navbar-brand" href="adminlogin.html" >ADMIN LOGIN</a>
         &nbsp;
-        <a class="navbar-brand" href="#">CUSTOMER LOGIN</a>
+        <a class="navbar-brand" href="customerlogin.html">CUSTOMER LOGIN</a>
       </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
