delete and modify frontend

--- a/article.html
+++ b/article.html
@@ -76,7 +76,7 @@
                 </select>
             </div>
         </div>
-        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc1()">Add Data</button>
+        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc1()">Submit</button>
     </form>
     <script>
         function myfunc1() {
