--- a/customer.html
+++ b/customer.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         
-        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc4()">Add Data</button>
+        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc4()">Submit</button>
     </form>
     <script>
         function myfunc4() {
