--- a/event.html
+++ b/event.html
@@ -64,7 +64,7 @@
             <input type="text" class="form-control" id="event_descrip">
           </div>
         </div>
-        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc3()">Add Data</button>
+        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc3()">Submit</button>
     </form>
     <script>
         function myfunc3() {
