--- a/admin.html
+++ b/admin.html
@@ -35,11 +35,10 @@
                   Delete a record
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Artist Data</a>
-                  <a class="dropdown-item" href="#">Article Data</a>
-                  <a class="dropdown-item" href="#">Customer Data</a>
-                  <a class="dropdown-item" href="#">Employee data</a>
-                  <a class="dropdown-item" href="#">Event Data</a>
+                  <a class="dropdown-item" href="artistdelete.html">Artist Data</a>
+                  <a class="dropdown-item" href="articledelete.html">Article Data</a>
+                  <a class="dropdown-item" href="customerdelete.html">Customer Data</a>
+                  <a class="dropdown-item" href="eventdelete.html">Event Data</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -47,11 +46,10 @@
                 Modify a record
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Artist Data</a>
-                <a class="dropdown-item" href="#">Article Data</a>
-                <a class="dropdown-item" href="#">Customer Data</a>
-                <a class="dropdown-item" href="#">Employee data</a>
-                <a class="dropdown-item" href="#">Event Data</a>
+                <a class="dropdown-item" href="artist.html">Artist Data</a>
+                <a class="dropdown-item" href="article.html">Article Data</a>
+                <a class="dropdown-item" href="customer.html">Customer Data</a>
+                <a class="dropdown-item" href="event.html">Event Data</a>
               </div>
           </div>
           <div class="dropdown">
@@ -62,7 +60,6 @@
               <a class="dropdown-item" href="#">Artist Data</a>
               <a class="dropdown-item" href="#">Article Data</a>
               <a class="dropdown-item" href="#">Customer Data</a>
-              <a class="dropdown-item" href="#">Employee data</a>
               <a class="dropdown-item" href="#">Event Data</a>
             </div>
         </div>
