--- a/artist.html
+++ b/artist.html
@@ -70,15 +70,8 @@
             <input type="number" class="form-control" id="artist_phone" placeholder="i.e +91...">
           </div>
         </div>
-        <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-              Check me out
-            </label>
-          </div>
-        </div>
-        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc()">Add Data</button>
+        
+        <button type="submit" class="btn" style="background-color:rgb(119, 32, 32)"onclick="myfunc()">Submit</button>
     </form>
     <script>
         function myfunc() {
