php for artist, article, customer

--- a/admin.html
+++ b/admin.html
@@ -24,10 +24,10 @@
                   Add a new record
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="artist.html">Artist Data</a>
-                  <a class="dropdown-item" href="article.html">Article Data</a>
-                  <a class="dropdown-item" href="customer.html">Customer Data</a>
-                  <a class="dropdown-item" href="event.html">Event Data</a>
+                  <a class="dropdown-item" href="artist.php">Artist Data</a>
+                  <a class="dropdown-item" href="article.php">Article Data</a>
+                  <a class="dropdown-item" href="customer.php">Customer Data</a>
+                  <a class="dropdown-item" href="event.php">Event Data</a>
                 </div>
             </div>
             <div class="dropdown">
