--- a/admin.html
+++ b/admin.html
@@ -46,10 +46,10 @@
                 Modify a record
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="artistmodify.html">Artist Data</a>
-                <a class="dropdown-item" href="articlemodify.html">Article Data</a>
-                <a class="dropdown-item" href="customermodify.html">Customer Data</a>
-                <a class="dropdown-item" href="eventmodify.html">Event Data</a>
+                <a class="dropdown-item" href="artistmodify.php">Artist Data</a>
+                <a class="dropdown-item" href="articlemodify.php">Article Data</a>
+                <a class="dropdown-item" href="customermodify.php">Customer Data</a>
+                <a class="dropdown-item" href="eventmodify.php">Event Data</a>
               </div>
           </div>
           <div class="dropdown">
