show artist table

--- a/admin.html
+++ b/admin.html
@@ -53,15 +53,10 @@
               </div>
           </div>
           <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-secondary dropdown-toggle" type="button" href="showtable.html"id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Get reports
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Artist Data</a>
-              <a class="dropdown-item" href="#">Article Data</a>
-              <a class="dropdown-item" href="#">Customer Data</a>
-              <a class="dropdown-item" href="#">Event Data</a>
-            </div>
+            
         </div>
         </div>
       </div>
