show table issue

--- a/admin.html
+++ b/admin.html
@@ -53,8 +53,8 @@
               </div>
           </div>
           <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" href="showtable.php"id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Get reports
+            <button class="btn" type="button" href="showtable.php"id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              See Current Database
             </button>
             
         </div>
