--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         &nbsp;
         <a class="navbar-brand" href="customerlogin.html">CUSTOMER LOGIN</a>
         &nbsp;
-        <a class="navbar-brand" href="accountslogin.php">ACOUNTANT gitLOGIN</a>
+        <a class="navbar-brand" href="accountslogin.php">ACOUNTANT LOGIN</a>
       </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
