--- a/event.html
+++ b/event.html
@@ -35,7 +35,7 @@
     <h1>
         <div class="form-row">
           <div class="form-group col-md-2">
-          <a href="admin.html" onclick="alert('Successfully Logged out!')"class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Home</a>
+          <a href="admin.html" class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Home</a>
           </div>
           <div class="form-group col-md-8">Enter the Necessary Details </div>
           <div class="form-group col-md-2">
