--- a/admin.html
+++ b/admin.html
@@ -41,10 +41,10 @@
                   Delete a record
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="artistdelete.html">Artist Data</a>
-                  <a class="dropdown-item" href="articledelete.html">Article Data</a>
-                  <a class="dropdown-item" href="customerdelete.html">Customer Data</a>
-                  <a class="dropdown-item" href="eventdelete.html">Event Data</a>
+                  <a class="dropdown-item" href="artistdelete.php">Artist Data</a>
+                  <a class="dropdown-item" href="articledelete.php">Article Data</a>
+                  <a class="dropdown-item" href="customerdelete.php">Customer Data</a>
+                  <a class="dropdown-item" href="eventdelete.php">Event Data</a>
                 </div>
             </div>
             <div class="dropdown">
