--- a/customerhome.html
+++ b/customerhome.html
@@ -60,6 +60,7 @@
           <li><a href="artdisplay.html">Articles</a></li>
           <li><a href="eventdisplay.html">Events</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html" onclick="alert('Successfully Logged out!')"class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Log Out</a></li>
         </ul>
         
         <div style="margin-left:25%;padding:50px 30px;height:1000px;" class="custcontent"></div>
