--- a/artdisplay.html
+++ b/artdisplay.html
@@ -46,7 +46,17 @@
   <body>
     
     <div style="height:1000px;" class="custcontent">
-    <h1>The Art Gallery</h1>
+      <h1>
+        <div class="form-row">
+          <div class="form-group col-md-2">
+          <a href="customerhome.html" class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Home</a>
+          </div>
+          <div class="form-group col-md-8">Art Gallery </div>
+          <div class="form-group col-md-2">
+            <a href="index.html" onclick="alert('Successfully Logged out!')"class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Log Out</a>
+          </div>
+        </div>
+      </h1>
     <div class="card artcard" style="width: 18rem;">
     <div class="articledisplay"><img class="card-img-top" src="3.jpeg" alt="Card image cap" ></div>
     <div class="card-body">
