--- a/eventdisplay.html
+++ b/eventdisplay.html
@@ -35,7 +35,17 @@
     </style>
   </head>
   <body>
-    <h1>The Art Gallery</h1>
+    <h1>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+        <a href="customerhome.html" class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Home</a>
+        </div>
+        <div class="form-group col-md-8">The Art Gallery</div>
+        <div class="form-group col-md-2">
+          <a href="index.html" onclick="alert('Successfully Logged out!')"class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;"role="button" aria-pressed="true">Log Out</a>
+        </div>
+      </div>
+    </h1>
     <div class="row">
     <div class="card text-white mb-3" style="max-width: 36rem; background-color: rgb(119, 32, 32);margin-top:20px;margin-left:20px; border-radius: 10px;">
         <div class="card-header  eventtitle">Event ID :101</div>
