--- a/admin.html
+++ b/admin.html
@@ -59,8 +59,11 @@
               </div>
           </div>
           <div class="dropdown">
-            <br><br>
-            <a href="showtable.php" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">See Current Database</a>
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="showtable.php" style="text-decoration: none;color:white" role="button" >See Current Database</a>
+            </button>
+
+            
           </div>
         </div>
       </div>
