--- a/admin.html
+++ b/admin.html
@@ -59,7 +59,7 @@
               </div>
           </div>
           <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-secondary dropdown-toggle" type="button"  aria-haspopup="true" aria-expanded="false">
               <a href="showtable.php" style="text-decoration: none;color:white" role="button" >See Current Database</a>
             </button>
 
