--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
             <br><i style="font-size:24px" class="fa">&#xf0e0;</i> &nbsp;artgallery@gmail.com<br>
             <br><i style="font-size:24px" class="fa">&#xf087;</i> &nbsp; artgallery/instagram.com&nbsp;<br>
             <br><i style="font-size:24px" class="fa">&#xf098;</i> &nbsp;+91876543345678<br>
+            <br>
+              <a href="customerhome.html" class="btn btn-lg active" style="background-color:rgb(75, 9, 9);color:rgb(255, 255, 255);font-weight:bolder;margin-left:60px;"role="button" aria-pressed="true">Home</a>
+            <br>
           </p>
         </div>
       </div>
