--- a/artdisplay.html
+++ b/artdisplay.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <script src="buyjavascript.js"></script>
     <title>Article Display</title>
     <style>
       body {
@@ -40,6 +40,7 @@
         margin:auto;
         background-color: rgb(119, 32, 32) ;
         border-color:rgb(119, 32, 32) ;
+        width:100%;
     }
     </style>
   </head>
@@ -63,10 +64,10 @@
         <h5 class="card-title">Sculpture</h5>
         <p class="card-text">
           <h6 style="display: inline-block;">Article ID:</h6> &nbsp; 401<br>
-          <h6 style="display: inline-block;">Artist:</h6> &nbsp;ME<br>
+          <h6 style="display: inline-block;">Artist:</h6> &nbsp;Swati Pasari<br>
           <h6 style="display: inline-block;">Price:</h6> &nbsp;&#8377; 500<br>
         </p>
-        <a href="#" class="btn btn-primary artbtn">Proceed to Buy</a>
+        <button href="#" onclick="myjavas()"class="btn btn-primary artbtn">Proceed to Buy</button>
     </div>
     </div>
     <div class="card artcard" style="width: 18rem;">
@@ -75,10 +76,10 @@
           <h5 class="card-title">Painting</h5>
           <p class="card-text">
             <h6 style="display: inline-block;">Article ID:</h6> &nbsp; 402<br>
-            <h6 style="display: inline-block;">Artist:</h6> &nbsp;ME<br>
+            <h6 style="display: inline-block;">Artist:</h6> &nbsp;Aarti Sunder<br>
             <h6 style="display: inline-block;">Price:</h6> &nbsp;&#8377; 2000<br>
           </p>
-          <a href="#" class="btn btn-primary artbtn">Proceed to Buy</a>
+          <button href="#" onclick="myjavas1()" class="btn btn-primary artbtn">Proceed to Buy</button>
       </div>
       </div>
     <div class="card artcard" style="width: 18rem;">
@@ -87,10 +88,10 @@
           <h5 class="card-title">Sculpture</h5>
           <p class="card-text">
             <h6 style="display: inline-block;">Article ID:</h6> &nbsp; 404<br>
-            <h6 style="display: inline-block;">Artist:</h6> &nbsp;ME<br>
+            <h6 style="display: inline-block;">Artist:</h6> &nbsp;Aman Khanna<br>
             <h6 style="display: inline-block;">Price:</h6> &nbsp;&#8377; 1400<br>
           </p>
-          <a href="#" class="btn btn-primary artbtn">Proceed to Buy</a>
+          <button href="#" onclick="myjavas2()"class="btn btn-primary artbtn">Proceed to Buy</button>
       </div>
       </div>
     
