--- a/eventdisplay.html
+++ b/eventdisplay.html
@@ -54,14 +54,14 @@
     </h1>
     <div class="row">
     <div class="card text-white mb-3" style="max-width: 36rem; background-color: rgb(119, 32, 32);margin-top:20px;margin-left:20px; border-radius: 10px;">
-        <div class="card-header  eventtitle">Event ID :101</div>
+      <div class="card-header  eventtitle">Event ID :101</div>
         <div class="card-body">
           <h5 class="card-title">A couple of Indian artists coming together for an exhibition and open minds about the modern and new generation art!</h5>
           <p class="card-text eventtitle">Articles on Display:</p>
           <ol>
-            <li>Cups in the Rhythm</li>
-            <li>Abstract Gardens</li>
-            <li>Flowers of Bhudha</li>
+            <li>Handmade Cups</li>
+            <li>The Unknown</li>
+            <li>The Buddha</li>
           </ol>
           <button href="#" onclick="myjavas5()"class="btn mybtn" style="display:block;margin:auto;color: rgb(119, 32, 32);background-color: rgb(255,255,255);">Register</button>
         </div>
