--- a/eventdisplay.html
+++ b/eventdisplay.html
@@ -66,6 +66,18 @@
           <button href="#" onclick="myjavas5()"class="btn mybtn" style="display:block;margin:auto;color: rgb(119, 32, 32);background-color: rgb(255,255,255);">Register</button>
         </div>
       </div>
+      <div class="card text-white mb-3" style="max-width: 36rem; background-color: rgb(119, 32, 32);margin-top:20px;margin-left:20px; border-radius: 10px;">
+        <div class="card-header  eventtitle">Event ID :102</div>
+          <div class="card-body">
+            <h5 class="card-title">A really buzzing atmosphere with some fresh new creations and an electric mix of art work.<br><br></h5>
+            <p class="card-text eventtitle">Articles on Display:</p>
+            <ol>
+              <li>Mist of Colour</li>
+              <li>The Eternal Bond</li>              
+            </ol><br>
+            <button href="#" onclick="myjavas6()"class="btn mybtn" style="display:block;margin:auto;color: rgb(119, 32, 32);background-color: rgb(255,255,255);">Register</button>
+          </div>
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
